--- a/src/main/resources/templates/login/css/style.css
+++ b/src/main/resources/templates/login/css/style.css
@@ -1,85 +1,167 @@
-:root{
-    --fondo: ECF8F9;
-    --white: #fff;
-    --black: #000;
-    --verdeClaro: #cbf4f8;
-    --verdeOscuro: #068DA9;
-    --marron: #7E1717;
-    --naranja: #E55807;
-}
-html{
-    font-size: 62.5%;
-    box-sizing: border-box; /*hack para box model*/
-}
-*, *:before, *:after {
-    box-sizing: inherit;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,500&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body{
-    font-size: 16px; /*1rem: 10px*/
-    font-family: 'Oswald', sans-serif;
-    background-color: var(--verdeClaro);
+  width: 100%;
+  height: 100vh;
+}
+span{
+  color: #31616c;
+}
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  position: relative;
+}
+.container::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  bottom: 0;
+  left: 0;
+  background-color: #21d4fd;
+  background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
 }
 
-h1,h2 {
-    text-align: center;
+.container form {
+  width: 380px;
+  height: 420px;
+  padding: 3rem 2rem;
+  background-color: white;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.241),
+    -5px -5px 10px rgba(153, 153, 153, 0.387);
+  border-radius: 35px;
+  text-align: center;
+  position: relative;
+  z-index: 2;
 }
-header{
-    background-color: var(--verdeOscuro);
-    padding: 5rem;
-}
-header h1 h2 {
-    /*color: var(--marron);*/
-    /*font-size: 100rem;*/
-    font-weight: 500;
-    display: flex;
-}
-header h2{
-    font-weight: 400;
+.input-fields {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
 }
 
-form{
-    text-align: center;
-    /*background-color: var(--naranja);*/
-    background-color: var(--white);
-    width: min(90rem, 100%); 
-    margin: 0 auto;
-    padding: 2rem;
-    border-radius: 1rem;
-    font-size: 1.5rem;
-    margin-top: 5rem;
+.logo {
+  width: 80px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 3px solid white;
+  border-radius: 50%;
+  box-shadow: 5px 5px 10px rgba(116, 116, 116, 0.352),
+  -5px -5px 10px rgba(168, 168, 168, 0.352);
 }
-form fieldset{
-    border: none;
+form h1{
+    font-family: sans-serif;
+    color: #21d4fd;
+    margin: 6px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 26px;
 }
-.campo{
-    margin-bottom: 1rem;
+.input-fields input{
+    width: 95%;
+    margin: 10px 0;
+    border: 1px solid rgba(137, 137, 137, 0.222);
+    padding: 8px 20px;
+    outline: none;
+    font-size: 17px;
+    border-radius: 20px;
+    background-color: whitesmoke;
 }
-.campo textarea{
-    height: 20rem;
-}
-.input-text{
+.input-fields .div{
     width: 100%;
-    border: none;
-    padding: 1.5rem;
-    border-radius: .5rem;
+    position: relative;
+    /* background-color: pink; */
+    margin-bottom: 15px;
 }
-.boton{
-    background-color: var(--naranja);
-    color: #fff;
-    padding: 1rem 3rem;
-    margin-top: 3rem;
-    font-size: 1.7rem;
-    text-decoration: none;
-    font-weight: 200;
+input:focus{
+    border-color: #21d4fd;
+}
+.input-fields input::placeholder{
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+}
+
+label{
+    font-family: 'Roboto', sans-serif;
+    color: rgba(0, 0, 0, 0.232);
+    position: absolute;
+    top: -10px;
+    left: 5px;
+    font-size: 15px;
+}
+input[type="submit"]{
+    background-color: #21d4fd;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
     text-transform: uppercase;
-    border-radius: .5rem;
-    width: 90%;
-    text-align: center;
-    border: none;
-    letter-spacing: 0.3rem;
-}
-.boton:hover{
     cursor: pointer;
-    background-color: #f19763;
-    padding: 1.2rem;
 }
+input[type="submit"]:hover{
+    background-color: #00a8ce;
+}
+.links{
+    width: 100%;
+    /* background-color: pink; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+.links a{
+    font-size: 15px;
+    color:#00a8ce;
+    text-decoration: none;
+}
+
+/* demo  */
+.demo{
+  width: 100%;
+  height: 100vh;
+  background-color: yellowgreen;
+  background: url("./Images/thanks.jpg");
+  background-size: 1000px;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+}
+.demo-div{
+  width: 50%;
+  border-radius: 30px;
+  border: 1px solid rgba(68, 68, 68, 0.21);
+  padding: 1rem;
+  margin: auto;
+  position: relative;
+  top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
+}
+.demo-div h1{
+  color: rgb(249, 125, 42);
+  font-family: 'Poppins', sans-serif;
+  font-size: 40px;
+}
+.demo-div button{
+  background-color: rgb(249, 125, 42);
+  color: white;
+  padding: 8px 25px;
+  font-size: 20px;
+  font-weight: 700;
+  cursor: pointer;
+  border: none;
+}
+/* demo  */
